organize media folder

--- a/Snake Game/SNAKE.ipynb
+++ b/Snake Game/SNAKE.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,14 +132,14 @@
     "\n",
     "# Game Soundtrack:\n",
     "player = pyglet.media.Player()\n",
-    "player.queue(pyglet.resource.media(\"spacesong2.mp3\", streaming=False))\n",
+    "player.queue(pyglet.resource.media(\"media_data/spacesong2.mp3\", streaming=False))\n",
     "player.play()\n",
     "start_time = time.time()\n",
     "end_time = 0\n",
     "\n",
     "#######################################################################################################\n",
     "# Game Title Intro Screen:\n",
-    "snake_intro = cv2.imread('sekiro_snake.jpg')\n",
+    "snake_intro = cv2.imread('media_data/sekiro_snake.jpg')\n",
     "snake_intro = cv2.resize(snake_intro,(400,400))\n",
     "cv2.putText(snake_intro, \"ULTIMATE PYTHON SNAKE\", (40, 300),cv2.FONT_HERSHEY_SIMPLEX, 0.8, (255, 50, 50), 2)\n",
     "cv2.imshow('SNAKE', snake_intro)\n",
@@ -155,11 +155,11 @@
     "        start_time = time.time()\n",
     "        player.pause()\n",
     "        player = pyglet.media.Player()\n",
-    "        player.queue(pyglet.resource.media(\"spacesong2.mp3\", streaming=False))\n",
+    "        player.queue(pyglet.resource.media(\"media_data/spacesong2.mp3\", streaming=False))\n",
     "        player.play()\n",
     "    \n",
     "    # Snake Sound Effect:\n",
-    "    pyglet.resource.media(\"pac.wav\", streaming=False).play()\n",
+    "    pyglet.resource.media(\"media_data/pac.wav\", streaming=False).play()\n",
     "    \n",
     "    ###################################################################################################\n",
     "    # Keyboard Configuration:\n",
@@ -212,7 +212,7 @@
     "        x2, y2 = Rand_Point(grid, LEVEL, SCORE)\n",
     "        \n",
     "        # Level UP Screens:\n",
-    "        snake_image = 'snake_' + str(LEVEL) + '.jpg'\n",
+    "        snake_image = 'media_data/snake_' + str(LEVEL) + '.jpg'\n",
     "        snake_show = cv2.imread(snake_image)\n",
     "        snake_show = cv2.resize(snake_show,(400,400))\n",
     "        \n",
@@ -227,11 +227,11 @@
     "            cv2.waitKey(1)\n",
     "            \n",
     "            creds_player = pyglet.media.Player()\n",
-    "            creds_player.queue(pyglet.resource.media(\"Creds.mp3\", streaming=False))\n",
+    "            creds_player.queue(pyglet.resource.media(\"media_data/Creds.mp3\", streaming=False))\n",
     "            creds_player.play()\n",
     "            plt.pause(5)\n",
     "            \n",
-    "            Credits = cv2.imread('Credits.png')\n",
+    "            Credits = cv2.imread('media_data/Credits.png')\n",
     "            Credits = cv2.resize(Credits,(400,400))\n",
     "            \n",
     "            while True:\n",
@@ -247,7 +247,7 @@
     "            \n",
     "        cv2.imshow('SNAKE', snake_show)\n",
     "        cv2.waitKey(1)\n",
-    "        pyglet.resource.media(\"fanfare.mp3\", streaming=False).play()\n",
+    "        pyglet.resource.media(\"media_data/fanfare.mp3\", streaming=False).play()\n",
     "        plt.pause(3)\n",
     "    \n",
     "    ###################################################################################################\n",
@@ -275,7 +275,7 @@
     "        body_add = tuple(map(operator.sub, body_before[len(body_before)-1], direction))\n",
     "        new_body.append(body_add)\n",
     "        body_before.append(body_add)\n",
-    "        pyglet.resource.media(\"Coin 2.wav\", streaming=False).play()\n",
+    "        pyglet.resource.media(\"media_data/Coin 2.wav\", streaming=False).play()\n",
     "        \n",
     "        # Update score:\n",
     "        SCORE += 1\n",
@@ -289,7 +289,7 @@
     "        body_add = tuple(map(operator.sub, body_before[len(body_before)-1], direction))\n",
     "        new_body.append(body_add)\n",
     "        body_before.append(body_add)\n",
-    "        pyglet.resource.media(\"Coin 2.wav\", streaming=False).play()\n",
+    "        pyglet.resource.media(\"media_data/Coin 2.wav\", streaming=False).play()\n",
     "        \n",
     "        # Update score:\n",
     "        SCORE += 1         \n",
@@ -330,15 +330,15 @@
     "    \n",
     "    if (grid[Death_Cond] == 255) or (grid[Death_Cond] == 25):\n",
     "        # Death Screen:\n",
-    "        frame = cv2.imread('DEATH.jpg')\n",
+    "        frame = cv2.imread('media_data/DEATH.jpg')\n",
     "        frame = cv2.resize(frame,(400,400))\n",
     "        cv2.putText(frame, 'SCORE: {}'.format(SCORE), (165, 330),cv2.FONT_HERSHEY_SIMPLEX, 0.6, (30, 30, 255), 2)\n",
     "        cv2.putText(frame, \"RESTARTING...\", (155, 90),cv2.FONT_HERSHEY_SIMPLEX, 0.6, (30, 30, 255), 2)\n",
     "        cv2.imshow('SNAKE', frame)\n",
     "        \n",
     "        # Death Sound Effect:\n",
-    "        pyglet.resource.media(\"Wrong 1.wav\", streaming=False).play()\n",
-    "        pyglet.resource.media(\"DEATH.mp3\", streaming=False).play()\n",
+    "        pyglet.resource.media(\"media_data/Wrong 1.wav\", streaming=False).play()\n",
+    "        pyglet.resource.media(\"media_data/DEATH.mp3\", streaming=False).play()\n",
     "        cv2.waitKey(1)\n",
     "        plt.pause(3) # Wait for Death Screen\n",
     "        \n",
@@ -385,13 +385,6 @@
     "cv2.destroyAllWindows()\n",
     "player.pause()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
